--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.1.0",
     "@mui/x-charts": "^8.4.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@toolpad/core": "^0.15.0",
     "chart.js": "^4.4.9",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
